@@ -4,7 +4,6 @@ import com.yandex.taskmanager.model.Status;
 import com.yandex.taskmanager.model.Task;
 import com.yandex.taskmanager.sevice.HistoryManager;
 import com.yandex.taskmanager.sevice.Managers;
-import com.yandex.taskmanager.sevice.TaskManager;
 import org.junit.jupiter.api.Test;
 
 import java.util.List;
@@ -14,7 +13,6 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 
 class InMemoryHistoryManagerTest {
 
-    TaskManager taskManager = Managers.getDefault();
     HistoryManager historyManager = Managers.getDefaultHistory();
 
     Task task1 = new Task("Потренироваться", "Выйти на пробежку", Status.IN_PROGRESS);
@@ -26,6 +24,14 @@ class InMemoryHistoryManagerTest {
         final List<Task> history = historyManager.getHistory();
         assertNotNull(history, "История не пустая.");
         assertEquals(1, history.size(), "История не пустая.");
-        assertEquals(historyManager.getHistory().get(0), task1, "Задачи не идентичны.");
+        assertEquals(historyManager.getHistory().getFirst(), task1, "Задачи не идентичны.");
+    }
+
+    @Test
+    void checkSizeHistory() {
+        for (int i = 0; i < 14; i++) {
+            historyManager.add(task1);
+        }
+        assertEquals(historyManager.getHistory().size(), 10, "Ограничение размера истории не работает");
     }
 }
